fixed image spacing issue

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -30,7 +30,7 @@ $cream: #f8f7f7;
   }
 
   a {
-    outline : none;
+    outline: none;
   }
 
   h1 {
@@ -128,12 +128,14 @@ $cream: #f8f7f7;
   display: flex;
   display: -webkit-box;
   display: -ms-flexbox;
+
   .side-image {
     width: 50%;
-    background-image: url(../img/full.jpg);
+    background-image: url("../img/full.jpg");
     background-position: center center;
     background-size: cover;
   }
+
   .about-text {
     width: 50%;
     display: -webkit-box;
@@ -147,31 +149,39 @@ $cream: #f8f7f7;
     justify-content: center;
     overflow: auto;
     background-color: $text;
+
     .about-body {
       padding: 60px;
-    p, a {
-      color: $white;
-    }
-    .my-name {
-      font-size: 20px;
-      color: $insta-blue;
-      margin-bottom: 30px;
-    }
-    .tagline {
-      font-size: 64px;
-    }
-    #age {
-      font-size: 30px;
-      margin-top: 20px;
-    }
-    .intro {
-      font-size: 18px;
-      margin: 40px 0px;
-      a {
-        text-decoration: underline;
-        color: $insta-blue;
+
+      a,
+      p {
+        color: $white;
       }
-    }
+
+      .my-name {
+        font-size: 20px;
+        color: $insta-blue;
+        margin-bottom: 30px;
+      }
+
+      .tagline {
+        font-size: 64px;
+      }
+
+      #age {
+        font-size: 30px;
+        margin-top: 20px;
+      }
+
+      .intro {
+        font-size: 18px;
+        margin: 40px 0;
+
+        a {
+          text-decoration: underline;
+          color: $insta-blue;
+        }
+      }
     }
   }
 }
@@ -248,13 +258,16 @@ $cream: #f8f7f7;
 
   img {
     max-width: 100%;
+    vertical-align: bottom;
   }
+
   img:hover {
     opacity: 0.7;
   }
 }
 
-.mfp-counter, .mfp-title {
+.mfp-counter,
+.mfp-title {
   font-family: $karla;
 }
 /* ---------- Photos Page End ---------- */
@@ -507,16 +520,20 @@ $cream: #f8f7f7;
       font-size: 18px;
     }
   }
+
   .main-container {
     display: flex;
     flex-direction: column;
     height: auto;
+
     .side-image {
       width: 100%;
       height: 70vh;
     }
+
     .about-text {
       width: 100%;
+
       .about-body {
         padding: 30px;
       }
@@ -532,12 +549,13 @@ $cream: #f8f7f7;
   .main-container {
     .about-text {
       .about-body {
-      .tagline {
-        font-size: 42px;
+        .tagline {
+          font-size: 42px;
+        }
       }
     }
-    }
   }
+
   .insta {
     .me {
       height: 100px;
